# cjit

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  before-sink.ll  cjit.cpp  generate-cfgs.sh  getinmemory.c  init-macos.sh  simple.c
Benchmarks/: README.md  emit-llvm-ir.sh
Benchmarks/floatmm/: floatmm.c  floatmm.ll
Benchmarks/intmm/: intmm.c  intmm.ll
Benchmarks/pi/: pi.c  pi.ll
Benchmarks/qsort/: qsort.c  qsort.ll
Benchmarks/sink/: .test.dot  sink.c  sink.ll  sink.ll.init.ll  sink.ll.opt.ll
Benchmarks/sum-1/: opt.sh  out.txt  pipeline.pass.txt  sum-1-pipeline.txt  sum-1.c  sum-1.ll  sum-1.ll.opt-O3
Benchmarks/sum-2/: sum-2.c  sum-2.ll
Benchmarks/sum-3/: sum-3.c  sum-3.ll  sum-3.opt.ll
Benchmarks/sum-4/: sum-4.c  sum-4.ll  sum-4.ll.opt-O3.ll  sum-4.ll.opt.ll
Optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
Optimizer/Passes/: CustomPass.cpp  CustomPass.h
TestRunner/: CMakeLists.txt  TestRunner.cpp  TestRunner.h  main.cpp
TestRunner/Benchmarks/: BenchRunner.cpp  BenchRunner.h
TestRunner/Benchmarks/FloatMM/: FloatMMBenchmark.cpp  FloatMMBenchmark.h
TestRunner/Benchmarks/IntMM/: IntMMBenchmark.cpp  IntMMBenchmark.h
TestRunner/Benchmarks/PI/: PIBenchmark.cpp  PIBenchmark.h
TestRunner/Benchmarks/QSort/: QSortBenchmark.cpp  QSortBenchmark.h
TestRunner/Benchmarks/Sink/: SinkBenchmark.cpp  SinkBenchmark.h
TestRunner/Benchmarks/Sum1/: Sum1Benchmark.cpp  Sum1Benchmark.h
TestRunner/Benchmarks/Sum2/: Sum2Benchmark.cpp  Sum2Benchmark.h
TestRunner/Benchmarks/Sum3/: Sum3Benchmark.cpp  Sum3Benchmark.h
TestRunner/Benchmarks/Sum4/: Sum4Benchmark.cpp  Sum4Benchmark.h
benchmarks/: emit-llvm-ir.sh
benchmarks/sink/: sink.c  sink.ll
examples/: get-ir.sh  simple.c  simple.ll
llvm-patches/: ClangTargets.cmake
optimizer/: CMakeLists.txt  Optimizer.h  init-macos.sh  optimizer.cpp
test-runner/: CMakeLists.txt  TestRunner.cpp  TestRunner.h  main.cpp
